# sodg.rs

./: .rultor.yml  .yamllint.yml  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  deny.toml
.github/workflows/: actionlint.yml  cargo-deny.yml  cargo.yml  copyrights.yml  markdown-lint.yml  reuse.yml  tarpaulin.yml  typos.yml  xcop.yml  yamllint.yml
benches/: bench.rs  bench_utils.rs  edge_index.rs
docs/: edge_index.md
src/: clone.rs  ctors.rs  debug.rs  dot.rs  edge_index.rs  find.rs  hex.rs  inspect.rs  label.rs  labels.rs  lib.rs  merge.rs  misc.rs  next.rs  ops.rs  script.rs  serialization.rs  slice.rs  xml.rs
