# SPDX-FileCopyrightText: Copyright (c) 2022-2025 Objectionary.com
# SPDX-License-Identifier: MIT

[package]
name = "sodg"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/objectionary/sodg"
description = "Surging Object DiGraph (SODG)"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/objectionary/sodg"
keywords = ["graph", "oop"]
categories = ["data-structures", "memory-management"]

[features]
gc = []

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"] }
ctor = "0.5.0"
emap = { version = "0.0.13", features = ["serde"] }
hex = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.176"
log = "0.4.28"
micromap = { version = "0.1.0", features = ["serde"] }
microstack = { version = "0.0.7", features = ["serde"] }
nohash-hasher = "0.2.0"
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.2"
rstest = "0.26.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.226", features = ["derive"] }
simple_logger = "5.0.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tinymap = "0.4.0"
xml-builder = "0.5.4"

[dev-dependencies]
criterion = "0.7.0"
predicates = "3.1.3"
tempfile = "3.23.0"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
